<resources>
    <string name="app_name">Wallpy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a_n_i_m_a_l_s">A N I M A L S</string>
    <string name="b_l_a_c_k">B L A C K</string>
    <string name="m_i_n_i_m_a_l_i_s_m">M I N I M A L I S M</string>
    <string name="s_p_a_c_e">S P A C E</string>
    <string name="n_a_t_u_r_e">N A T U R E</string>
    <string name="c_a_r_s">C A R S</string>
    <string name="s_k_y">S K Y</string>
    <string name="m_o_t_i_v_a_t_i_o_n">M O T I V A T I O N</string>
</resources>