<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".fragments.CategoryFragment"
   >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical"
    >


    <android.widget.Button
        android:id="@+id/buttonNature"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:backgroundTint="@color/transparent"
        android:gravity="center"
        android:text="@string/n_a_t_u_r_e"
        android:textColor="@color/white"
        android:background="@drawable/nature_button_back"
        android:backgroundTintMode="add"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <android.widget.Button
        android:id="@+id/buttonSpace"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:backgroundTint="@color/transparent"
        android:fontFamily="@font/roboto_semi"
        android:layout_marginTop="10dp"
        android:text="@string/s_p_a_c_e"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/space_button_back"
        android:backgroundTintMode="add"
        android:textColor="@color/white"
        android:gravity="center"
        />


    <android.widget.Button
        android:id="@+id/buttonMinimalism"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:backgroundTint="@color/transparent"
        android:fontFamily="@font/roboto_semi"
        android:text="@string/m_i_n_i_m_a_l_i_s_m"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/mini"
        android:backgroundTintMode="add"
        />
    <android.widget.Button
        android:id="@+id/buttonBlack"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:backgroundTint="@color/transparent"
        android:fontFamily="@font/roboto_semi"
        android:layout_marginTop="10dp"
        android:text="@string/b_l_a_c_k"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/black"
        android:backgroundTintMode="add"
        android:textColor="@color/white"
        android:gravity="center"
        />


    <android.widget.Button
        android:id="@+id/buttonAnimal"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:backgroundTint="@color/transparent"
        android:fontFamily="@font/roboto_semi"
        android:layout_marginTop="10dp"
        android:text="@string/a_n_i_m_a_l_s"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/animal_test6"
        android:backgroundTintMode="add"
        android:textColor="@color/white"
        android:gravity="center"
        />

    <android.widget.Button
        android:id="@+id/buttonCars"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:backgroundTint="@color/transparent"
        android:fontFamily="@font/roboto_semi"
        android:layout_marginTop="10dp"
        android:text="@string/c_a_r_s"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/car_button"
        android:backgroundTintMode="add"
        android:textColor="@color/white"
        android:gravity="center"
        />
    <android.widget.Button
        android:id="@+id/buttonSky"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:backgroundTint="@color/transparent"
        android:fontFamily="@font/roboto_semi"
        android:layout_marginTop="10dp"
        android:text="@string/s_k_y"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/sky_button"
        android:backgroundTintMode="add"
        android:textColor="@color/black"
        android:gravity="center"
        />
    <android.widget.Button
        android:id="@+id/buttonMotivation"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:backgroundTint="@color/transparent"
        android:fontFamily="@font/roboto_semi"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="70dp"
        android:text="@string/m_o_t_i_v_a_t_i_o_n"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/motivational_button"
        android:backgroundTintMode="add"
        android:textColor="@color/white"
        android:gravity="center"
        />



</LinearLayout>



</ScrollView>